<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/sampleIDFld"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patientIDFld" />

    <TextView
        android:id="@+id/patientID"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/patient_id_label"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patientName" />

    <TextView
        android:id="@+id/sampleID"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/sample_id_label"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patientID" />

    <EditText
        android:id="@+id/patientNameFld"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testNameSpinner" />

    <EditText
        android:id="@+id/patientIDFld"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patientNameFld" />

    <TextView
        android:id="@+id/patientName"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/patient_name_label"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testName" />

    <TextView
        android:id="@+id/testName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/test_name_label"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addNewSampleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:backgroundTint="#F44336"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sampleIDFld"
        app:srcCompat="@android:drawable/ic_input_add"
        android:focusable="true" />

    <Spinner
        android:id="@+id/testNameSpinner"
        android:layout_width="230sp"
        android:layout_height="30sp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="#F44336"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>